syntax = "proto3";
package replication;

import "author.proto";

message GetLogHeightDeltasRequest{
  string aliases_uuid = 1;
  repeated AuthorKnownLogHeights author_known_log_heights = 2;
}

message GetLogHeightDeltasResponse{
  repeated AuthorKnownLogHeights author_known_log_heights = 1;
}

message AuthorKnownLogHeights{
  Author author = 1;
  repeated LogHeight known_log_heights = 2;
}

message LogHeight{
  uint64 log_id = 1;
  uint64 sequence = 2;
}
